--- a/_includes/image-gallery.html
+++ b/_includes/image-gallery.html
@@ -1,4 +1,5 @@
 <style>
+  .image-gallery {overflow: auto; margin-left: 0%!important;}
     .image-gallery a {display: block; margin-left: auto; margin-right: auto; width: 30%; text-align: center; text-decoration: none!important;}
     .image-gallery a span {display: block; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; padding: 3px 0;}
     .image-gallery a img {width: 100%; display: block;}
