--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -29,6 +29,9 @@ common-js:
 
     <script src="/js/jquery-1.11.2.min.js"></script>
 
+    <script type="text/javascript" src="/js/lightbox.js"></script>
+    <link rel="stylesheet" href="/css/lightbox.css">
+
     {% include footer.html %}
 
     {% include footer-scripts.html %}
